# CAOM

./: README.md
CAOM/: CMakeLists.txt  package.xml
CAOM/config/: parameters.yaml  test.rviz  testmapping.rviz  testodom.rviz
CAOM/include/: ceresAnalyticCost.h  ceresSplineCost.h  ceresSplineCostSophus.h  constraintSphere.hpp  featureExtractor_livox.hpp  gtsamHelper.hpp  ikd_Tree.h  imageProjectionManager.h  lineStructure.h  localBA.hpp  nanoflann.hpp  point_with_cov.h  poseEstimationLib.hpp  so3spline.h  tools.h  trimmedICP.h  utilities.h  voxelHash.h
CAOM/launch/: runMappingSpline.launch  runMappingWithRef.launch  runOdomBactracing.launch  runmappingBA.launch  runodom.launch
CAOM/msg/: cloud_info.msg  localmapWithPoseMsg.msg  poseInSlidingWin.msg
CAOM/src/: ceresSplineCost.cpp  dataPreprocessing.cpp  featureExtraction.cpp  graphOptimization.cpp  ikd_Tree.cpp  lineFitting.cpp  mapOptiSplineFusion.cpp  mappingWithReference.cpp  odomEstimation.cpp  tools.cpp
