<?xml version="1.0"?>
<package>
  <name>structural_mapping</name>
  <version>1.0.0</version>
  <description>SLAM with lines and planes</description>

  <maintainer email="xxx@xxx.xxx">CYZ</maintainer>

  <license>BSD</license>

  <author >Yangzi Cong</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>ros_bridge</build_depend>
  <run_depend>ros_bridge</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>
  <build_depend>pcl_conversions</build_depend>
  <run_depend>pcl_conversions</run_depend>

  <build_depend>cv_bridge</build_depend>
  <run_depend>cv_bridge</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
<!--  <build_depend>cloud_msgs</build_depend>-->
<!--  <run_depend>cloud_msgs</run_depend>-->
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>

  <build_depend>message_runtime</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>

  <build_depend>image_transport</build_depend>
  <run_depend>image_transport</run_depend>

  <build_depend>gtsam</build_depend>
  <run_depend>gtsam</run_depend>

  <build_depend>octomap</build_depend>
  <run_depend>octomap</run_depend>

  <build_depend>ndt_omp</build_depend>
  <run_depend>ndt_omp</run_depend>

  <build_depend>fast_gicp</build_depend>
  <run_depend>fast_gicp</run_depend>

  <!-- <build_depend>jsk_recognition_msgs</build_depend> -->
  <!-- <run_depend>jsk_recognition_msgs</run_depend> -->

</package>
